# paraseek

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  load_google_benchmark.cmake
playground/: CMakeLists.txt  brute_force_vs_tables.cpp  solve_all.cpp  solve_one.cpp
src/: CMakeLists.txt  Checker.h  MPS.h  ProblemMatrix.h  ProblemsNames.h  main.cpp
src/matrix/: CSCMatrix.h  Matrix.h
src/problems/: MPS.h  ProblemMatrix.h  ProblemsNames.cpp
src/seekers/: BruteForce.h  Result.cpp  Result.h  SimHash.h  Statistics.h  Tables.h
src/similarity/: Hamming.cpp  Hamming.h  Jaccard.cpp  Jaccard.h  Union.cpp  Union.h  ZipRows.h
src/utils/: Accumulators.h  Hamming.cpp  Logging.h  Paths.h  Printing.cpp  Printing.h  String.h  Time.h
tests/: CMakeLists.txt  FastHammingTests.cpp  HammingTests.cpp  SimilarityTests.cpp  TablesTests.cpp  load_google_test.cmake
